# invop-tp

./: .gitignore  asignacion_cuadrillas.py  main.py  pyproject.toml  requirements.txt
experimentos/: experimento.py  experimento_1.ipynb  experimento_2.ipynb  experimento_3.ipynb  experimento_4.ipynb  experimento_5.ipynb  experimento_6.ipynb  graficos.py  objetivo.ipynb
experimentos/exp1/: experimento_1.ipynb
experimentos/exp2/: experimento_2.ipynb
experimentos/exp3/: experimento_3.ipynb
experimentos/exp4/: experimento_4.ipynb
instancias/: ejemplo_consigna.txt  instancia1.txt  instancia2.txt  instancia3.txt  instancia4.txt
src/: instancia.py  solucion.py  solver.py
src/generacion/: __init__.py  generador.py
src/generacion/distribuciones/: multivariada.py  univariada.py
src/modelo/: __init__.py  modelo.py  objetivo.py  restricciones.py  restricciones_deseables.py  variables.py
