[tool.poetry]
name = "invop-tp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.*"
docplex = "2.27.239"
six = "1.16.0"
cplex = { path = "/opt/ibm/ILOG/CPLEX_Studio2211/cplex/python/3.10/x86-64_linux" }
recordclass = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "E741"
]
